--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'English literature -- Periodicals'
 - !lcsh 'London (England) -- Periodicals'
 - !lcc 'AP'
+- GITenberg
 title: The London Mercury, Vol. I, Nos. 1-6, November 1919 to April 1920
 url: http://www.gutenberg.org/ebooks/45116
